# i3-workspace-groups

./: .travis.yml  Cargo.toml  README.md
src/: args.rs  common.rs  controller.rs  main.rs  sorted_hash.rs
