[package]
name = "i3-workspace-groups"
version = "0.1.0"
authors = ["Caleb Bassi <calebjbassi@gmail.com>"]
description = "Organize i3-wm workspaces into groups."
documentation = "https://github.com/cjbassi/i3-workspace-groups"
homepage = "https://github.com/cjbassi/i3-workspace-groups"
repository = "https://github.com/cjbassi/i3-workspace-groups"
readme = "README.md"
keywords = ["i3", "groups", "workspace", "tiling", "wm"]
license = "MIT"

edition = "2018"

[[bin]]
name = "i3-workspace-groups"
path = "src/main.rs"

[dependencies]
i3ipc = "0.9.0"
structopt = "0.2.13"
log = "0.4.6"
env_logger = "0.6.0"
